Switch to MySQL (ugh) and refactor user lookup/creation/mocks stuff.
Unfortunately the crappy hosting situation makes Postgres a no no for
the time being. Switching to MySQL revealed some interesting bugs in
the tests, namely places where the DB was being called when it shouldn't
have been. The plugin for the User account DAO has been expanded to cover
creation/password change as well as just finding instances, and the use
of mock user accounts made more coherent.